--- a/lugx.html
+++ b/lugx.html
@@ -104,7 +104,7 @@
             </div>
             <div class="gameoptiontext">
                 <h6>Action</h6>
-                <h2>Spiderman <i class="fa-solid fa-cart-shopping"></i></h2>
+                <h2>THOR <i class="fa-solid fa-cart-shopping"></i></h2>
             </div>
         </div>
         <div class="gameoption">
@@ -114,7 +114,7 @@
             </div>
             <div class="gameoptiontext">
                 <h6>Action</h6>
-                <h2>Spiderman <i class="fa-solid fa-cart-shopping"></i></h2>
+                <h2>ANTMAN <i class="fa-solid fa-cart-shopping"></i></h2>
             </div>
         </div>
         <div class="gameoption">
@@ -124,7 +124,7 @@
             </div>
             <div class="gameoptiontext">
                 <h6>Action</h6>
-                <h2>Spiderman <i class="fa-solid fa-cart-shopping"></i></h2>
+                <h2>FLASH <i class="fa-solid fa-cart-shopping"></i></h2>
             </div>
         </div>
         <div class="gameoption">
@@ -134,7 +134,7 @@
             </div>
             <div class="gameoptiontext">
                 <h6>Action</h6>
-                <h2>Spiderman <i class="fa-solid fa-cart-shopping"></i></h2>
+                <h2>IRONMAN <i class="fa-solid fa-cart-shopping"></i></h2>
             </div>
         </div>
         <div class="gameoption">
@@ -161,42 +161,42 @@
 
         <div class="topgames">
             <div class="topgame__items">
-                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="">
+                <img src="backgroud.jpg" alt="">
                 <div class="topgame__item-content">
                     <h4>Adventure</h4>
-                    <h3>Assasin Creed</h3>
+                    <h3>Prince of persia</h3>
                     <a href="" class="topgame__item-link">EXPLORE</a>
                 </div>
             </div>
             <div class="topgame__items">
-                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="">
+                <img src="bgmi.jpeg" alt="">
                 <div class="topgame__item-content">
                     <h4>Adventure</h4>
-                    <h3>Assasin Creed</h3>
+                    <h3>Shadow Fight </h3>
                     <a href="" class="topgame__item-link">EXPLORE</a>
                 </div>
             </div>
             <div class="topgame__items">
-                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="">
+                <img src="wallll.jpeg" alt="">
                 <div class="topgame__item-content">
                     <h4>Adventure</h4>
-                    <h3>Assasin Creed</h3>
+                    <h3>HEHEHEHEHE</h3>
                     <a href="" class="topgame__item-link">EXPLORE</a>
                 </div>
             </div>
             <div class="topgame__items">
-                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="">
+                <img src="chuto name.jpeg" alt="">
                 <div class="topgame__item-content">
                     <h4>Adventure</h4>
-                    <h3>Assasin Creed</h3>
+                    <h3>Wolverine</h3>
                     <a href="" class="topgame__item-link">EXPLORE</a>
                 </div>
             </div>
             <div class="topgame__items">
-                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="">
+                <img src="spiderman.jpeg" alt="">
                 <div class="topgame__item-content">
                     <h4>Adventure</h4>
-                    <h3>Assasin Creed</h3>
+                    <h3>Spiderman</h3>
                     <a href="" class="topgame__item-link">EXPLORE</a>
                 </div>
             </div>
@@ -219,60 +219,80 @@
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
+
+                    <div class="imagecard">
                     <img src="Ash And Pikachu Wallpaper.jpeg" alt="" draggable="false">
                 </div>
+                </div>
                 <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
+                    <div class="imagecard">
                     <img src="Bend the Knee or Perish.jpeg" alt="" draggable="false">
                 </div>
+                </div>
                 <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
+                    <div class="imagecard">
                     <img src="1st pic.jpeg" alt="" draggable="false">
                 </div>
+                </div>
                 <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
+                    <div class="imagecard">
                     <img src="Venom 🖤👽.jpeg" alt="" draggable="false">
                 </div>
-                <div class="category__card">
-                    <div class="card__content">
-                        <h3>Action</h3>
-                    </div>
-                    <img src="spiderman.jpeg" alt="" draggable="false">
                 </div>
                 <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
+                    <div class="imagecard">
+                    <img src="spiderman.jpeg" alt="" draggable="false">
+                </div>
+                </div>
+                <div class="category__card">
+                    <div class="card__content">
+                        <h3>Action</h3>
+                    </div>
+                    <div class="imagecard">
                     <img src="naruto.jpeg" alt="" draggable="false">
+                </div>
                 </div>
                  <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
+                    <div class="imagecard">
                     <img src="download.jpeg" alt="" draggable="false">
                 </div>
+                </div>
                 <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
+                    <div class="imagecard">
                     <img src="naruto.jpeg" alt="" draggable="false">
                 </div>
-                <div class="category__card">
-                    <div class="card__content">
-                        <h3>Action</h3>
-                    </div>
-                    <img src="prince od pp.jpeg" alt="" draggable="false">
                 </div>
                 <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
+                    <div class="imagecard">
+                    <img src="prince od pp.jpeg" alt="" draggable="false">
+                </div>
+                </div>
+                <div class="category__card">
+                    <div class="card__content">
+                        <h3>Action</h3>
+                    </div>
+                    <div class="imagecard">
                     <img src="Pin on Places to visit.jpeg" alt="" draggable="false">
                 </div> 
             </div>
@@ -282,8 +302,56 @@
 </section>
 
 
+<!-- nextsection5 -->
+<section class="CTA__sect"> 
+    <div class="container9">
+        <div class="CTA">
+            <div class="CTA__ourshop">
+                <h4 class="section__littletitle">OUR SHOP</h4>
+                <h2 class="section__largtitle">Go Pre-Order Buy & Get Best <span>Prices</span> For You!</h2>
+                <p class="ourshop__text">Lorem ipsum dolor consectetur adipiscing, sed do eiusmod tempor incididunt.</p>
+                <a href="" class="ourshop__link">SHOP NOW</a>
+            </div>
+
+            <div class="CTA__newletter">
+                <h4 class="section__littletitle">NEWSLETTER</h4>
+                <h2 class="section__largtitle">Get Up To $100 Off Just Buy <span>Subscribe</span> Newsletter!</h2>
+                <div class="newsletter__inp-container">
+                    <input type="text" name="" id="" placeholder="Your email...">
+                    <button>SUBSCRIBE NOW</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- footer section -->
+
+<footer>
+<div class="cointainer0">
+        <div class="copy__right">
+            <!-- <h3 class="webdeveloper">Website developer : <a href="#">gugu</a></h3> -->
+            <!-- <h3 class="disignby">Dsign by : <a href="#">TemplateMo</a></h3> -->
+        </div>
+    </div>
+
+
+
+
+
+
+</footer>
+
+
+
+
+
+
+
+
+
 
 
 </body>
+<script src="action.js"> </script>
 </html>
 
