--- a/lugx.html
+++ b/lugx.html
@@ -381,71 +381,20 @@
     </section>
 
     <!-- section4 -->
-
     <section class="section4">
-        <h6>Categories</h6>
-        <h2>Top Categories</h2>
-       <div class="slider" style="
-        --width:32rem ;
-        --height:30rem; 
-        --quantity:10;
-       ">
-        <div class="slidetrack">
-            <div class="slide" style="--position: 1">
-                <img src="Kratos fury.jpg" alt="">
-            </div>
-            <div class="slide" style="--position: 2">
-                <img src="Kratos fury.jpg" alt="">
-            </div>
-            <div class="slide" style="--position: 3">
-                <img src="Kratos fury.jpg" alt="">
-            </div>
-            <div class="slide" style="--position: 4">
-                <img src="Kratos fury.jpg" alt="">
-            </div>
-            <div class="slide" style="--position: 5">
-                <img src="Kratos fury.jpg" alt="">
-            </div>
-            <div class="slide" style="--position: 6">
-                <img src="Kratos fury.jpg" alt="">
-            </div>
-            <div class="slide" style="--position: 7">
-                <img src="Kratos fury.jpg" alt="">
-            </div>
-            <div class="slide" style="--position: 8">
-                <img src="Kratos fury.jpg" alt="">
-            </div>
-            <div class="slide" style="--position: 9">
-                <img src="Kratos fury.jpg" alt="">
-            </div>
-            <div class="slide" style="--position: 10">
-                <img src="Kratos fury.jpg" alt="">
-            </div>
-        </div>
-       </div>
-    </section>
-
-    <!-- section5 -->
-
-    <section class="section5">
-            <div class="fristboxsection5">
-                <h6>Our Shop</h6>
-                <h2>Go Pre-Order Buy &Get Best <span>Prices</span> For You!</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus vel nostrum nam ipsa est optio!</p>
-                <button>SHOP NOW</button>
-            </div>
-            <div class="secondboxsection5">
-                <img src="Kratos fury.jpg" alt="">
-            </div>
-            <div class="thirdboxsection5">
-                <h6>NEWSLETTER</h6>
-                <h2>Get Up To $100 off Just Buy <span>Subscribe</span>Newsletter</h2>
-                <div class="buttonlast">
-                    <input type="text" name="" placeholder="Your Email">
-                    <button>SUBSCRIBE</button>
-                </div>
-            </div>
         
+        <div class="wraper">
+            <div class="item item1 "></div>
+            <div class="item item2"></div>
+            <div class="item item3"></div>
+            <div class="item item4"></div>
+            <div class="item item5"></div>
+            <div class="item item6"></div>
+            <div class="item item7"></div>
+            <div class="item item8"></div>
+            <div class="item item9"></div>
+            <div class="item item10"></div>
+        </div>
     </section>
 </body>
 <script src="lugx.js"></script>
