--- a/lugx.html
+++ b/lugx.html
@@ -155,6 +155,56 @@
                     <h2>Spiderman <i class="fa-solid fa-bag-shopping"></i></h2>
                 </div>
             </div>
+            <div class="gameoption">
+                <div class="gameoptionimage">
+                    <img src="Spiderman Painting Wallpaper 4K HD free download Background UltraHD for PC laptop and mobile.jpg" alt="" class="imagephoto">
+                    <h2>$22</h2>
+                </div>
+                <div class="gameoptiontext">
+                    <h6>Action</h6>
+                    <h2>Spiderman <i class="fa-solid fa-bag-shopping"></i></h2>
+                </div>
+            </div>
+            <div class="gameoption">
+                <div class="gameoptionimage">
+                    <img src="Spiderman Painting Wallpaper 4K HD free download Background UltraHD for PC laptop and mobile.jpg" alt="" class="imagephoto">
+                    <h2>$22</h2>
+                </div>
+                <div class="gameoptiontext">
+                    <h6>Action</h6>
+                    <h2>Spiderman <i class="fa-solid fa-bag-shopping"></i></h2>
+                </div>
+            </div>
+            <div class="gameoption">
+                <div class="gameoptionimage">
+                    <img src="Spiderman Painting Wallpaper 4K HD free download Background UltraHD for PC laptop and mobile.jpg" alt="" class="imagephoto">
+                    <h2>$22</h2>
+                </div>
+                <div class="gameoptiontext">
+                    <h6>Action</h6>
+                    <h2>Spiderman <i class="fa-solid fa-bag-shopping"></i></h2>
+                </div>
+            </div>
+            <div class="gameoption">
+                <div class="gameoptionimage">
+                    <img src="Spiderman Painting Wallpaper 4K HD free download Background UltraHD for PC laptop and mobile.jpg" alt="" class="imagephoto">
+                    <h2>$22</h2>
+                </div>
+                <div class="gameoptiontext">
+                    <h6>Action</h6>
+                    <h2>Spiderman <i class="fa-solid fa-bag-shopping"></i></h2>
+                </div>
+            </div>
+            <div class="gameoption">
+                <div class="gameoptionimage">
+                    <img src="Spiderman Painting Wallpaper 4K HD free download Background UltraHD for PC laptop and mobile.jpg" alt="" class="imagephoto">
+                    <h2>$22</h2>
+                </div>
+                <div class="gameoptiontext">
+                    <h6>Action</h6>
+                    <h2>Spiderman <i class="fa-solid fa-bag-shopping"></i></h2>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -382,20 +432,137 @@
 
     <!-- section4 -->
     <section class="section4">
-        
+        <h6 class="categories">Categories</h6>
+        <h2 class="topcategories">Top Categories</h2>
         <div class="wraper">
-            <div class="item item1 "></div>
-            <div class="item item2"></div>
-            <div class="item item3"></div>
-            <div class="item item4"></div>
-            <div class="item item5"></div>
-            <div class="item item6"></div>
-            <div class="item item7"></div>
-            <div class="item item8"></div>
-            <div class="item item9"></div>
-            <div class="item item10"></div>
+            <div class="item item1 ">
+                <div class="itemtext">
+                    <h4>Action</h4>
+                </div>
+                <div class="itemimg">
+                    <img src="Kratos fury.jpg" alt="">
+                </div>
+            </div>
+            <div class="item item2">
+                <div class="itemtext">
+                    <h4>Action</h4>
+                </div>
+                <div class="itemimg">
+                    <img src="Kratos fury.jpg" alt="">
+                </div>
+            </div>
+            <div class="item item3">
+                <div class="itemtext">
+                    <h4>Action</h4>
+                </div>
+                <div class="itemimg">
+                    <img src="Kratos fury.jpg" alt="">
+                </div>
+            </div>
+            <div class="item item4">
+                <div class="itemtext">
+                    <h4>Action</h4>
+                </div>
+                <div class="itemimg">
+                    <img src="Kratos fury.jpg" alt="">
+                </div>
+            </div>
+            <div class="item item5">
+                <div class="itemtext">
+                    <h4>Action</h4>
+                </div>
+                <div class="itemimg">
+                    <img src="Kratos fury.jpg" alt="">
+                </div>
+            </div>
+            <div class="item item6">
+                <div class="itemtext">
+                    <h4>Action</h4>
+                </div>
+                <div class="itemimg">
+                    <img src="Kratos fury.jpg" alt="">
+                </div>
+            </div>
+            <div class="item item7">
+                <div class="itemtext">
+                    <h4>Action</h4>
+                </div>
+                <div class="itemimg">
+                    <img src="Kratos fury.jpg" alt="">
+                </div>
+            </div>
+            <div class="item item8">
+                <div class="itemtext">
+                    <h4>Action</h4>
+                </div>
+                <div class="itemimg">
+                    <img src="Kratos fury.jpg" alt="">
+                </div>
+            </div>
+            <div class="item item9">
+                <div class="itemtext">
+                    <h4>Action</h4>
+                </div>
+                <div class="itemimg">
+                    <img src="Kratos fury.jpg" alt="">
+                </div>
+            </div>
+            <div class="item item10">
+                <div class="itemtext">
+                    <h4>Action</h4>
+                </div>
+                <div class="itemimg">
+                    <img src="Kratos fury.jpg" alt="">
+                </div>
+            </div>
         </div>
     </section>
+
+    <section class="section5">
+        <div class="backgroundimage">
+            <div class="containerlast">
+                <div class="ourshop">
+                    <h6 class="ourshop1">Our Shop</h6>
+                    <h1 class="gopro">
+                        Go Pre-Order Buy & Get Best <span>Prices</span> For You!
+                    </h1>'
+                    <h5 class="textarea">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque quos vero suscipit molestiae dicta, voluptatibus alias incidunt. Consequuntur tempore sunt eaque reiciendis, aliquam, impedit, non enim obcaecati esse vitae eius.
+                    </h5>
+                    <button>SHOP NOW</button>
+                </div>
+                <div class="newsletter">
+                    <h6 class="newsletter1">
+                        NEWSLETTER
+                    </h6>   
+                    <h1 class="subscriber">
+                        Get Up To To $100 Off Just Buy <span>Subscribe</span>
+                        Newsletter!
+                    </h1> 
+                    <div class="subscribenow">
+                        <input type="text" name="text" id="text" placeholder="Your Email">
+                        <button class="searchbutton">Subscribe</button>
+                    </div>       
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer1">
+            <div class="logolast">
+                <img src="icons8-xbox-500.png" alt="Logo" class="logo">
+            </div>
+            <div class="last">
+                <ul class="nav_links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Our Shop</a></li>
+                    <li><a href="#">Product Details</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+        <p>&copy; 2025 Your Company.All rights reserved</p>
+    </footer>
 </body>
 <script src="lugx.js"></script>
 
