--- a/lugx.html
+++ b/lugx.html
@@ -49,11 +49,12 @@
                 </div>
             </div>
         </section>
+
         <div class="boxcollection">
             <div class="boxcollectionboxes">
                 <div class="innerbox">
                     <div class="icons">
-                        <i class="fa-solid fa-circle-user" ></i>
+                        <i class="fa-solid fa-database" style="color: #ffffff;"></i>
                     </div>
                     <h3>Free Storage</h3>
                 </div>
@@ -62,7 +63,7 @@
             <div class="boxcollectionboxes">
                 <div class="innerbox">
                     <div class="icons">
-                        <i class="fa-solid fa-circle-user" ></i>
+                        <i class="fa-solid fa-user" style="color: #ffffff;"></i>
                     </div>
                     <h3>User mode</h3>
                 </div>
@@ -70,7 +71,7 @@
             <div class="boxcollectionboxes">
                 <div class="innerbox">
                     <div class="icons">
-                        <i class="fa-solid fa-circle-play"></i>
+                        <i class="fa-solid fa-play" style="color: #ffffff;"></i>
                     </div>
                     <h3>Play ready</h3>
                 </div>
@@ -78,7 +79,7 @@
             <div class="boxcollectionboxes">
                 <div class="innerbox">
                     <div class="icons">
-                        <i class="fa-solid fa-circle-user" ></i>
+                        <i class="fa-solid fa-layer-group" style="color: #ffffff;"></i>
                     </div>
                     <h3>Easy Layout</h3>
                 </div>
@@ -167,42 +168,42 @@
             </div>
             <div class="gameoption">
                 <div class="gameoptionimage">
-                    <img src="Spiderman Painting Wallpaper 4K HD free download Background UltraHD for PC laptop and mobile.jpg" alt="" class="imagephoto">
+                    <img src="Genshin Impact wallpaper.jpeg" alt="" class="imagephoto">
                     <h2>$22</h2>
                 </div>
                 <div class="gameoptiontext">
                     <h6>Action</h6>
-                    <h2>Spiderman <i class="fa-solid fa-bag-shopping"></i></h2>
+                    <h2>Genshin Impact<i class="fa-solid fa-bag-shopping"></i></h2>
                 </div>
             </div>
             <div class="gameoption">
                 <div class="gameoptionimage">
-                    <img src="Spiderman Painting Wallpaper 4K HD free download Background UltraHD for PC laptop and mobile.jpg" alt="" class="imagephoto">
+                    <img src="Cheval Kingdom Come 2 _ Comment récupérer une monture en quelques minutes _.jpeg" alt="" class="imagephoto">
                     <h2>$22</h2>
                 </div>
                 <div class="gameoptiontext">
                     <h6>Action</h6>
-                    <h2>Spiderman <i class="fa-solid fa-bag-shopping"></i></h2>
+                    <h2>Red redumption 2<i class="fa-solid fa-bag-shopping"></i></h2>
                 </div>
             </div>
             <div class="gameoption">
                 <div class="gameoptionimage">
-                    <img src="Spiderman Painting Wallpaper 4K HD free download Background UltraHD for PC laptop and mobile.jpg" alt="" class="imagephoto">
+                    <img src="The Real Krampus.jpeg" alt="" class="imagephoto">
                     <h2>$22</h2>
                 </div>
                 <div class="gameoptiontext">
                     <h6>Action</h6>
-                    <h2>Spiderman <i class="fa-solid fa-bag-shopping"></i></h2>
+                    <h2>Far Cry 6<i class="fa-solid fa-bag-shopping"></i></h2>
                 </div>
             </div>
             <div class="gameoption">
                 <div class="gameoptionimage">
-                    <img src="Spiderman Painting Wallpaper 4K HD free download Background UltraHD for PC laptop and mobile.jpg" alt="" class="imagephoto">
+                    <img src="Le Saviez-Tu _ Le reboot de Tomb Raider a failli être un survival-horror.jpeg" alt="" class="imagephoto">
                     <h2>$22</h2>
                 </div>
                 <div class="gameoptiontext">
                     <h6>Action</h6>
-                    <h2>Spiderman <i class="fa-solid fa-bag-shopping"></i></h2>
+                    <h2>Tomb Raider<i class="fa-solid fa-bag-shopping"></i></h2>
                 </div>
             </div>
         </div>
@@ -408,15 +409,15 @@
                     <h4>Action</h4>
                 </div>
                 <div class="itemimg">
-                    <img src="Kratos fury.jpg" alt="">
+                    <img src="_Black Myth_ Wukong_ gana premio a _Juego del Año_ en los Golden Joystick Awards 2024_ Y así, comienza la temporada de premiaciones de videojuegos_.jpeg" alt="">
                 </div>
             </div>
             <div class="item item2">
                 <div class="itemtext">
-                    <h4>Action</h4>
+                    <h4>Action-advanture</h4>
                 </div>
                 <div class="itemimg">
-                    <img src="Kratos fury.jpg" alt="">
+                    <img src="download (12).jpeg" alt="">
                 </div>
             </div>
             <div class="item item3">
