--- a/lugx.html
+++ b/lugx.html
@@ -417,71 +417,71 @@
                     <h4>Action-advanture</h4>
                 </div>
                 <div class="itemimg">
-                    <img src="download (12).jpeg" alt="">
+                    <img src="Ellie Williams.jpeg" alt="">
                 </div>
             </div>
             <div class="item item3">
                 <div class="itemtext">
-                    <h4>Action</h4>
+                    <h4>Horror</h4>
                 </div>
                 <div class="itemimg">
-                    <img src="Kratos fury.jpg" alt="">
+                    <img src="Phasmophobia child ghost model my beloved.jpeg" alt="">
                 </div>
             </div>
             <div class="item item4">
                 <div class="itemtext">
-                    <h4>Action</h4>
+                    <h4>RPG</h4>
                 </div>
                 <div class="itemimg">
-                    <img src="Kratos fury.jpg" alt="">
+                    <img src="Fetchling Rogue_ Pathfinder 2E, D&D.jpeg" alt="">
                 </div>
             </div>
             <div class="item item5">
                 <div class="itemtext">
-                    <h4>Action</h4>
+                    <h4>Multiplayer</h4>
                 </div>
                 <div class="itemimg">
-                    <img src="Kratos fury.jpg" alt="">
+                    <img src="Midas.jpeg" alt="">
                 </div>
             </div>
             <div class="item item6">
                 <div class="itemtext">
-                    <h4>Action</h4>
+                    <h4>Sports</h4>
                 </div>
                 <div class="itemimg">
-                    <img src="Kratos fury.jpg" alt="">
+                    <img src="EA SPORTS FC 25 - PlayStation 5.jpeg" alt="">
                 </div>
             </div>
             <div class="item item7">
                 <div class="itemtext">
-                    <h4>Action</h4>
+                    <h4>FPS</h4>
                 </div>
                 <div class="itemimg">
-                    <img src="Kratos fury.jpg" alt="">
+                    <img src="Viper - Valorant.jpeg" alt="">
                 </div>
             </div>
             <div class="item item8">
                 <div class="itemtext">
-                    <h4>Action</h4>
+                    <h4>Puzzle</h4>
                 </div>
                 <div class="itemimg">
-                    <img src="Kratos fury.jpg" alt="">
+                    <img src="Man Puzzle Corrections.jpeg" alt="">
                 </div>
             </div>
             <div class="item item9">
                 <div class="itemtext">
-                    <h4>Action</h4>
+                    <h4>RTS</h4>
                 </div>
                 <div class="itemimg">
-                    <img src="Kratos fury.jpg" alt="">
+                    <img src="Instagram.jpeg" alt="">
                 </div>
             </div>
             <div class="item item10">
                 <div class="itemtext">
-                    <h4>Action</h4>
+                    <h4>Educational</h4>
                 </div>
                 <div class="itemimg">
-                    <img src="Kratos fury.jpg" alt="">
+                    <img src="Chess piece Chess king on a chessboard _ Premium AI-generated image.jpeg" alt="">
                 </div>
             </div>
         </div>
