--- a/lugx.html
+++ b/lugx.html
@@ -530,22 +530,31 @@
             </div>
         </div>
     </section>
-    <!-- <footer>
-        <div class="footer1">
-            <div class="logolast">
-                <img src="icons8-xbox-500.png" alt="Logo" class="logo">
+   <footer>
+         <div class="footer">
+            <div class="logoimg2">
+                <img src="icons8-xbox-500.png" alt="#">
             </div>
-            <div class="last">
-                <ul class="nav_links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Our Shop</a></li>
-                    <li><a href="#">Product Details</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
-            </div>
+              <div class="footer1">
+                <li> <a href="#">Home</a></li>
+                <li> <a href="#">Our shop</a></li>
+                <li> <a href="#">Product Details</a></li>
+                <li> <a href="#">Contact Us</a></li>
+              </div>
+              <div class="emailsection">
+                <div class="buttonemail">
+                    <input type="text" name="text" id="text" placeholder="Your Email">
+                    <button>Subscribe</button>
+                </div>
+                <div class="iconslast">
+                    <i class="fa-brands fa-facebook" ></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+              </div>
         </div>
-        <p>&copy; 2025 Your Company.All rights reserved</p>
-    </footer> -->
+   </footer>
 </body>
 <script src="lugx.js"></script>
 
