--- a/lugx.html
+++ b/lugx.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="navbar">
             <div class="logo">
-                <img src="favicon.png" alt="Lugx Logo">
+                <img src="/images/favicon" alt="Lugx Logo">
             </div>
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
             <label for="menu-toggle" class="hamburger">
@@ -46,7 +46,7 @@
         </div>
 
         <div class="hero-image">
-            <img src="MV5BOWM3YjRkM2MtZmU3My00OTc4LTg0MDMtMmEzYjc3NWNjMjIxXkEyXkFqcGc@.jpg" alt="Game Character">
+            <img src="images/MV5BOWM3YjRkM2MtZmU3My00OTc4LTg0MDMtMmEzYjc3NWNjMjIxXkEyXkFqcGc@.jpg" alt="Game Character">
             <div class="circleee">40%</div>
             <div class="price-tag">
                 <span class="price">$22</span>
