--- a/class.html
+++ b/class.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello There</h1>
-
+    <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt non temporibus debitis aperiam dolore culpa esse facilis ipsa ratione fugit maxime quaerat incidunt, libero vitae!</p>
 </body>
 </html>
 
